<resources>
    <string name="app_name">CookTasty</string>

    <string name="text_favourite">Favourite</string>
    <string name="text_recipe">Recipe</string>
    <string name="text_activity">Activity</string>
    <string name="text_me">Me</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string-array name="settings_options">
        <item>Settings</item>
        <item>Privacy</item>
        <item>Help and Support</item>
    </string-array>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_login">CookTasty</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to recipe_page -->
    <string name="error_message">Error!</string>

    <!-- Strings related to recipe_details_page -->
    <string name="recipe_description">Recipe Description</string>
    <string name="recipe_ingredients">Recipe Ingredients</string>

    <!--Strings related to recipe_upload_page-->
    <string name="recipe_upload_name">Recipe Name</string>
    <string name="hour">h</string>
    <string name="minute">min</string>
    <string name="second">s</string>
    <string name="hintTxtItem">Enter an item here ...</string>
    <string name="lblBtnAdd">Add Ingredient</string>
    <string name="recipe_duration">Recipe Duration</string>
    <string name="select">Select</string>
    <string name="remove">Remove</string>
    <string name="next">Next</string>

    <!-- Strings related to activity_timeline_page -->
    <string name="timeline">Timeline</string>
    <string name="dashboard">Dashboard</string>
    <string name="chefs">Chefs</string>
    <string name="recipe_instruction_image">Recipe Instruction Image</string>
    <string name="time_required">Time Required</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="recipe_time">recipe time</string>
    <string name="recipe_difficulty">Recipe Difficulty</string>
    <string name="recipe_instruction">Recipe Instruction</string>
    <string name="previous_step">Previous Step</string>
    <string name="next_step">Next Step</string>
    <string name="done">Done</string>
    <string name="main_menu">Main Menu</string>
    <string name="cooktasty">Cooktasty</string>
    <string name="search_hint">Search Recipe</string>


</resources>
