<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_recipe_upload_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop" />


        <TextView
            android:id="@+id/tv_recipe_upload_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/recipe_upload_name"
            android:padding="16dp"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_recipe_upload_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recipe_upload_name" />

        <TextView
            android:id="@+id/tv_recipe_upload_description_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="@string/recipe_description"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/et_recipe_upload_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recipe_description" />

        <TextView
            android:id="@+id/tv_recipe_upload_duration_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="@string/recipe_duration"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner_recipe_duration_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour" />

            <Spinner
                android:id="@+id/spinner_recipe_duration_minute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minute" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_recipe_upload_difficulty_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="@string/recipe_difficulty"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/spinner_recipe_difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_recipe_upload_ingrdients_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_ingredients"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnRemoveIngredient"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:onClick="onClick"
                android:text="@string/remove" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_recipe_ingredient_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner_recipe_quantity"
                android:layout_width="80dp"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/spinner_recipe_quantity_measurement"
                android:layout_width="110dp"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/spinner_recipe_ingredients"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnSelectIngredient"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:onClick="onClick"
                android:text="@string/select" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hintTxtItem"
                android:inputType="text" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:onClick="onClick"
                android:text="@string/lblBtnAdd"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>


</ScrollView>