<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recipeStepScrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_recipe_instruction_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:clickable="true"
                android:contentDescription="@string/recipe_instruction_image"
                android:focusable="true"
                android:onClick="uploadRecipeInstructionImage"
                android:scaleType="centerCrop"
                android:src="@drawable/img_placeholder"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_required" />

                <EditText
                    android:id="@+id/time_hour"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="number"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hour" />

                <EditText
                    android:id="@+id/time_minute"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="number"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minute" />


            </LinearLayout>

            <TextView
                android:id="@+id/tv_recipe_upload_instruction_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/recipe_instruction"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/et_recipeInstructionDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:textSize="20sp" />

        </LinearLayout>

        <Button
            android:id="@+id/toNextRecipeStepButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="goToNextInstruction"
            android:text="@string/next_step"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearlayout" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>
