<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:id="@+id/iv_recipe_details_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop" />

            <ImageButton
                android:id="@+id/iv_recipe_isfavourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="16dp"
                android:background="@null"
                android:onClick="onClick" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_recipe_details_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:text="Recipe Name"
            android:textSize="40sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="2dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_recipe_details_description_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="@string/recipe_description"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_recipe_details_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:gravity="center_vertical"
            android:text="This is my simple recipe description. For sample only."
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <RelativeLayout
                android:layout_height="25dp"
                android:layout_width="190dp" >

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/ic_recipe_duration" />

                <TextView
                    android:id="@+id/tv_recipe_details_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_alignBottom="@+id/imageView3"
                    android:layout_toRightOf="@+id/imageView3"
                    android:text="recipe time"
                    android:textAlignment="textStart"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_height="match_parent"
                android:layout_width="180dp" >

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/ic_recipe_difficulty" />

                <TextView
                    android:id="@+id/tv_recipe_details_difficulty"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="0dp"
                    android:layout_weight="0.05"
                    android:layout_toRightOf="@+id/imageView2"
                    android:text="recipe difficulty"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_recipe_details_ingrdients_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="@string/recipe_ingredients"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_recipe_details_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tv_recipe_error_message_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/error_message"
            android:textSize="20sp"
            android:visibility="invisible" />

</LinearLayout>